--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 install:
   - pip install -r requirements.txt
   - docker build -t juniper/open-nti .
-  - docker build -t dgarros/tcpreplay .
+  - docker pull dgarros/tcpreplay 
   - docker run -d --volume $(pwd)/data:/opt/open-nti/data  --volume $(pwd)/dashboards:/src/dashboards --volume $(pwd)/tests:/opt/open-nti/tests --restart always --publish 8125:8125/udp --publish 6000:6000/udp --publish 5000:50000/udp --publish 50010:50010/udp --publish 50020:50020/udp --publish 80:80 --publish 3000:3000 --publish 8083:8083 --publish 8086:8086 --publish 2222:2222 --name 'open-nti_con' 'juniper/open-nti' /sbin/my_init
 
 before_script:
